--- a/src/index.css
+++ b/src/index.css
@@ -65,3 +65,14 @@ h3{
 p{
   color: grey;
 }
+.BagIcon  img {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 10px;
+  left: 465px;
+  background-color: white;
+  border: 1px solid grey;
+  border-radius: 50%;
+  padding: 5px;
+}
